test/units/TypingSpec/invalid/types/case-session-wildcard.algst
\(c : ?Bool.End!) -> case c of {
  True c -> (),
  _ -> (),
}
